--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="item_padding">10dp</dimen>
+    <dimen name="item_margin">10dp</dimen>
+    <dimen name="item_image_size">120dp</dimen>
 </resources>
