--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- Text styles -->
+    <style name="TitleText" parent="@android:style/TextAppearance.Large">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
 </resources>
