--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
 
         </android.support.design.widget.AppBarLayout>
 
+        <!--
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
@@ -31,13 +32,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            -->
 
-        <ListView
-            android:id="@+id/list"
-            android:layout_height="wrap_content"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" >
-        </ListView>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                 >
+            </ListView>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
