--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:padding="@dimen/item_padding">
+    android:padding="@dimen/item_padding"
+    android:foreground="?selectableItemBackground">
 
     <LinearLayout
         android:orientation="vertical"
