--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="item_margin">10dp</dimen>
     <dimen name="item_image_width">120dp</dimen>
     <dimen name="item_image_height">80dp</dimen>
+    <dimen name="item_image_desc_height">200dp</dimen>
 </resources>
