--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,14 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <!--
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+        <TextView
+            android:id="@+id/errorContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/error_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-            -->
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefresh"
